; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/arc/gnu/extr_arc-opc.c_ac_constant_operand.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/arc/gnu/extr_arc-opc.c_ac_constant_operand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arc_operand = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ac_constant_operand(%struct.arc_operand* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.arc_operand*, align 8
  store %struct.arc_operand* %0, %struct.arc_operand** %3, align 8
  %4 = load %struct.arc_operand*, %struct.arc_operand** %3, align 8
  %5 = getelementptr inbounds %struct.arc_operand, %struct.arc_operand* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %8 [
    i32 64, label %7
    i32 117, label %7
    i32 75, label %7
    i32 76, label %7
    i32 111, label %7
    i32 101, label %7
    i32 69, label %7
    i32 106, label %7
    i32 74, label %7
    i32 107, label %7
    i32 108, label %7
    i32 109, label %7
    i32 77, label %7
    i32 79, label %7
    i32 82, label %7
    i32 63, label %7
    i32 12, label %7
    i32 16, label %7
    i32 17, label %7
    i32 18, label %7
    i32 19, label %7
    i32 20, label %7
    i32 21, label %7
  ]

7:                                                ; preds = %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1
  store i32 1, i32* %2, align 4
  br label %9

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %9

9:                                                ; preds = %8, %7
  %10 = load i32, i32* %2, align 4
  ret i32 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
